cmake_minimum_required(VERSION 3.26)
project(Assignment1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assignment1 Assignment1/assignment1.cpp)
add_executable(Lab Work Lab Work/labwork_oct06.cpp)
add_executable(Helper code Helper code/recursion_memo_dp.cpp)
add_executable(Helper code Helper code/measure_execution_time.cpp)
